# Bin-Lights_data

./: .pre-commit-config.yaml  README.md  bin-parser.py  extract_dates.py  generator.py  pyproject.toml
.github/workflows/: generate.yaml
output/: Featherston.json  Greytown.json  Martinborough.json
tests/: test_extractors.py  test_image_helpers.py  test_main.py  test_mappings.py  test_models.py  test_parse.py  test_process_calendar.py
