[dependency-groups]
dev = [
  "pre-commit >= 4.2.0"
]

[project]
dependencies = [
  "numpy >= 2.2.4",
  "opencv-python >= 4.11.0.86",
  "pymupdf >= 1.25.5",
  "pytesseract >= 0.3.13",
  "rich >= 14.0.0",
  "tessdata-eng >= 1.0.0",
]
description = "Json data of Bin rotations extracted from an Image/Pdf."
name = "Bin-Lights"
readme = "README.md"
requires-python = ">= 3.13"
version = "0.1.0"

[tool.ruff]
fix = true
line-length = 100
output-format = "grouped"
show-fixes = true
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "native"
skip-magic-trailing-comma = true

[tool.ruff.lint]
ignore = [
  "COM812",
  "D",
  "EM",
  "FBT",
  "PLR0913",
  "T201"
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod"]

[tool.ruff.lint.per-file-ignores]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.tomlsort]
all = true
